refactor: use logger instead of SysOut